raftstore: support switch witness (#13491)
* support switch witness

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* add switch witness api for test_pd_client

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* pd heartbeat resp support switch witness

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* update region epoch

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* fix write apply state race

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* remove unnecessary code

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* add back test_witness_conf_change

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* add some tests

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* avoid test failures

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* address comments

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* address comments

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* address comments

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* address comments

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* a few refactor

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* add witness election priority and address comments

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* clean code

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* address comments

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* address comments

ref tikv/tikv#12876

Signed-off-by: Wenbo Zhang <ethercflow@gmail.com>

* fix tests failed caused by cfg

ref tikv/tikv#12876

Signed-off-by: 

--- a/etc/error_code.toml
+++ b/etc/error_code.toml
@@ -448,6 +448,11 @@ error = '''
 KV:Raftstore:FlashbackNotPrepared
 '''
 
+["KV:Raftstore:IsWitness"]
+error = '''
+KV:Raftstore:IsWitness
+'''
+
 ["KV:Raftstore:SnapAbort"]
 error = '''
 KV:Raftstore:SnapAbort
