--- a/proxy_server/Cargo.toml
+++ b/proxy_server/Cargo.toml
@@ -84,6 +84,7 @@ raftstore = { workspace = true, default-features = false }
 rand = "0.8"
 regex = "1.3"
 resolved_ts = { workspace = true, default-features = false }
+resource_control = { workspace = true }
 resource_metering = { workspace = true }
 security = { workspace = true, default-features = false }
 serde = "1.0"
