--- a/components/batch-system/Cargo.toml
+++ b/components/batch-system/Cargo.toml
@@ -13,7 +13,7 @@ crossbeam = "0.8"
 derive_more = { version = "0.99", optional = true }
 fail = "0.5"
 file_system = { workspace = true }
-kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+kvproto = { workspace = true }
 lazy_static = "1.3"
 online_config = { workspace = true }
 prometheus = { version = "0.13", default-features = false, features = ["nightly"] }
