--- a/components/resource_control/Cargo.toml
+++ b/components/resource_control/Cargo.toml
@@ -13,7 +13,7 @@ crossbeam-skiplist = "0.1"
 dashmap = "5.1"
 fail = "0.5"
 futures = { version = "0.3" }
-kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+kvproto = { workspace = true }
 lazy_static = "1.0"
 online_config = { workspace = true }
 pd_client = { workspace = true }
