ref 13730 support priority scheduling for async write
Signed-off-by: Connor1996 <zbk602423539@gmail.com>

--- a/components/resource_control/Cargo.toml
+++ b/components/resource_control/Cargo.toml
@@ -9,6 +9,8 @@ failpoints = ["fail/failpoints"]
 
 [dependencies]
 byteorder = "1.2"
+collections = { workspace = true }
+crossbeam = "0.8"
 crossbeam-skiplist = "0.1"
 dashmap = "5.1"
 fail = "0.5"
