--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -149,6 +149,7 @@ tidb_query_datatype = { workspace = true }
 tikv_kv = { workspace = true }
 tipb_helper = { workspace = true }
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
+test_raftstore_macro = { workspace = true }
 
 [target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dev-dependencies]
 criterion-perf-events = "0.1"
